fixed pmd:IntegerInstantiation
SVN-Revision: 15487